--- a/views/fxml/digital_trainer/digital_trainer_board.fxml
+++ b/views/fxml/digital_trainer/digital_trainer_board.fxml
@@ -5,13 +5,15 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.geometry.Insets?>
+
 <?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.canvas.Canvas?>
-<StackPane xmlns:fx="http://javafx.com/javafx">
-    <HBox prefWidth="540" prefHeight="720"
-          minWidth="540" minHeight="720"
-          maxWidth="540" maxHeight="720"
-          spacing="26"
+<?import javafx.scene.Group?>
+<StackPane xmlns:fx="http://javafx.com/javafx"
+           fx:controller="vbb.controllers.digital_trainer.DigitalTrainerController"
+           prefWidth="540" prefHeight="720"
+           minWidth="540" minHeight="720"
+           maxWidth="540" maxHeight="720">
+    <HBox spacing="26"
           id="digital_trainer_board"
           stylesheets="/vbb/views/css/digital_trainer_style.css">
         <AnchorPane>
@@ -34,8 +36,8 @@
         </VBox>
         <VBox alignment="CENTER" spacing="19">
             <fx:include source="power_supply.fxml"/>
-            <fx:include source="input_connectors_area.fxml"/>
-            <fx:include source="output_connectors_area.fxml"/>
+            <fx:include fx:id="dataSwitchesArea" source="data_switches_area.fxml"/>
+            <fx:include fx:id="ledDisplayArea" source="led_display_area.fxml"/>
         </VBox>
         <AnchorPane>
             <ImageView AnchorPane.topAnchor="7" AnchorPane.rightAnchor="7">
@@ -50,5 +52,5 @@
             </ImageView>
         </AnchorPane>
     </HBox>
-    <Canvas fx:id="digitalTrainerCanvas"/>
+    <Group fx:id="appliedTools" mouseTransparent="true"/>
 </StackPane>
