--- a/views/fxml/digital_trainer/led_display_area.fxml
+++ b/views/fxml/digital_trainer/led_display_area.fxml
@@ -1,10 +1,10 @@
 <?import javafx.scene.layout.GridPane?>
-<?import vbb.controllers.digital_trainer.controls.ConnectorControl?>
+<?import vbb.controllers.digital_trainer.controls.SocketControl?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.geometry.Insets?>
 
 <GridPane xmlns:fx="http://javafx.com/javafx"
-          fx:controller="vbb.controllers.digital_trainer.LEDDisplayAreaController"
+          fx:controller="vbb.controllers.digital_trainer.LedDisplayAreaController"
           hgap="35" vgap="14"
           styleClass="area">
 
@@ -12,21 +12,21 @@
         <Insets top="14" right="30" bottom="14" left="45"/>
     </padding>
 
-    <ConnectorControl GridPane.rowIndex="0" GridPane.columnIndex="0"/>
+    <SocketControl fx:id="socket1" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
     <Circle radius="10" GridPane.rowIndex="0" GridPane.columnIndex="1" styleClass="led"/>
-    <ConnectorControl GridPane.rowIndex="1" GridPane.columnIndex="0"/>
+    <SocketControl fx:id="socket2" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
     <Circle radius="10" GridPane.rowIndex="1" GridPane.columnIndex="1" styleClass="led"/>
-    <ConnectorControl GridPane.rowIndex="2" GridPane.columnIndex="0"/>
+    <SocketControl fx:id="socket3" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
     <Circle radius="10" GridPane.rowIndex="2" GridPane.columnIndex="1" styleClass="led"/>
-    <ConnectorControl GridPane.rowIndex="3" GridPane.columnIndex="0"/>
+    <SocketControl fx:id="socket4" GridPane.rowIndex="3" GridPane.columnIndex="0"/>
     <Circle radius="10" GridPane.rowIndex="3" GridPane.columnIndex="1" styleClass="led"/>
-    <ConnectorControl GridPane.rowIndex="4" GridPane.columnIndex="0"/>
+    <SocketControl fx:id="socket5" GridPane.rowIndex="4" GridPane.columnIndex="0"/>
     <Circle radius="10" GridPane.rowIndex="4" GridPane.columnIndex="1" styleClass="led"/>
-    <ConnectorControl GridPane.rowIndex="5" GridPane.columnIndex="0"/>
+    <SocketControl fx:id="socket6" GridPane.rowIndex="5" GridPane.columnIndex="0"/>
     <Circle radius="10" GridPane.rowIndex="5" GridPane.columnIndex="1" styleClass="led"/>
-    <ConnectorControl GridPane.rowIndex="6" GridPane.columnIndex="0"/>
+    <SocketControl fx:id="socket7" GridPane.rowIndex="6" GridPane.columnIndex="0"/>
     <Circle radius="10" GridPane.rowIndex="6" GridPane.columnIndex="1" styleClass="led"/>
-    <ConnectorControl GridPane.rowIndex="7" GridPane.columnIndex="0"/>
+    <SocketControl fx:id="socket8" GridPane.rowIndex="7" GridPane.columnIndex="0"/>
     <Circle radius="10" GridPane.rowIndex="7" GridPane.columnIndex="1" styleClass="led"/>
 
 </GridPane>
