Simulated power flow of digital trainer. Flow to power supply area and data switches area done.

--- a/views/fxml/digital_trainer/digital_trainer.fxml
+++ b/views/fxml/digital_trainer/digital_trainer.fxml
@@ -52,5 +52,8 @@
             </ImageView>
         </AnchorPane>
     </HBox>
-    <Pane fx:id="appliedTools" mouseTransparent="true"/>
+    <StackPane fx:id="pluggedTools" mouseTransparent="true">
+        <Pane fx:id="pluggedChips" mouseTransparent="true"/>
+        <Pane fx:id="pluggedWires" mouseTransparent="true"/>
+    </StackPane>
 </StackPane>
