--- a/views/fxml/digital_trainer/data_switches_area.fxml
+++ b/views/fxml/digital_trainer/data_switches_area.fxml
@@ -13,32 +13,32 @@
         <Insets top="10" right="14" bottom="10" left="45"/>
     </padding>
 
-    <VBox spacing="24">
+    <VBox fx:id="socketsWrapper" spacing="24">
         <padding>
             <Insets top="10" bottom="10"/>
         </padding>
-        <SocketControl fx:id="socket1"/>
-        <SocketControl fx:id="socket2"/>
-        <SocketControl fx:id="socket3"/>
-        <SocketControl fx:id="socket4"/>
-        <SocketControl fx:id="socket5"/>
-        <SocketControl fx:id="socket6"/>
-        <SocketControl fx:id="socket7"/>
-        <SocketControl fx:id="socket8"/>
+        <SocketControl/>
+        <SocketControl/>
+        <SocketControl/>
+        <SocketControl/>
+        <SocketControl/>
+        <SocketControl/>
+        <SocketControl/>
+        <SocketControl/>
     </VBox>
 
-    <VBox spacing="24" styleClass="switch_box">
+    <VBox fx:id="dataSwitchesWrapper" spacing="24" styleClass="switch_box">
         <padding>
             <Insets top="10" right="15" bottom="10" left="15"/>
         </padding>
-        <DataSwitchControl fx:id="dataSwitch1"/>
-        <DataSwitchControl fx:id="dataSwitch2"/>
-        <DataSwitchControl fx:id="dataSwitch3"/>
-        <DataSwitchControl fx:id="dataSwitch4"/>
-        <DataSwitchControl fx:id="dataSwitch5"/>
-        <DataSwitchControl fx:id="dataSwitch6"/>
-        <DataSwitchControl fx:id="dataSwitch7"/>
-        <DataSwitchControl fx:id="dataSwitch8"/>
+        <DataSwitchControl/>
+        <DataSwitchControl/>
+        <DataSwitchControl/>
+        <DataSwitchControl/>
+        <DataSwitchControl/>
+        <DataSwitchControl/>
+        <DataSwitchControl/>
+        <DataSwitchControl/>
     </VBox>
 
 </HBox>
