--- a/views/fxml/digital_trainer/power_supply_area.fxml
+++ b/views/fxml/digital_trainer/power_supply_area.fxml
@@ -25,6 +25,6 @@
             </padding>
             <PowerSwitchControl fx:id="powerSwitch"/>
         </VBox>
-        <LEDControl fx:id="ledControl"/>
+        <LEDControl fx:id="led"/>
     </VBox>
 </HBox>
