--- a/views/fxml/digital_trainer/custom_control/data_switch.fxml
+++ b/views/fxml/digital_trainer/custom_control/data_switch.fxml
@@ -1,6 +1,15 @@
 <?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.HBox?>
 <fx:root type="javafx.scene.layout.StackPane" xmlns:fx="http://javafx.com/javafx" alignment="CENTER_RIGHT">
     <Rectangle fx:id="box" width="22" height="10" x="0" y="0" styleClass="switch_toggle_box"/>
-    <Rectangle fx:id="toggleHandle" width="10" height="10" x="12" y="0" styleClass="switch_toggle"
-               mouseTransparent="true"/>
+    <StackPane alignment="CENTER_RIGHT">
+        <HBox spacing="5" alignment="CENTER">
+            <Label text="1" styleClass="switch_state"/>
+            <Label text="0" styleClass="switch_state"/>
+        </HBox>
+        <Rectangle fx:id="toggleHandle" width="10" height="10" x="12" y="0" styleClass="switch_toggle"
+                   mouseTransparent="true"/>
+    </StackPane>
 </fx:root>
