--- a/views/fxml/digital_trainer/power_supply_area.fxml
+++ b/views/fxml/digital_trainer/power_supply_area.fxml
@@ -5,15 +5,22 @@
 <?import javafx.geometry.Insets?>
 
 <?import vbb.controllers.digital_trainer.controls.LEDControl?>
+<?import javafx.scene.control.Label?>
 <HBox xmlns:fx="http://javafx.com/javafx"
       fx:controller="vbb.controllers.digital_trainer.PowerSupplyAreaController"
       spacing="7">
     <VBox spacing="24" styleClass="area">
         <padding>
-            <Insets top="17" right="25" bottom="17" left="45"/>
+            <Insets top="17" right="7" bottom="17" left="45"/>
         </padding>
-        <SocketControl fx:id="positiveSocket"/>
-        <SocketControl fx:id="negativeSocket"/>
+        <HBox alignment="CENTER_RIGHT" spacing="6">
+            <SocketControl fx:id="positiveSocket"/>
+            <Label text="+" styleClass="power_voltage"/>
+        </HBox>
+        <HBox alignment="CENTER_RIGHT" spacing="6">
+            <SocketControl fx:id="negativeSocket"/>
+            <Label text="−" styleClass="power_voltage"/>
+        </HBox>
     </VBox>
     <VBox alignment="CENTER" spacing="3">
         <padding>
