Tools plugged on the Digital Trainer board can be removed.

--- a/views/fxml/digital_trainer/digital_trainer.fxml
+++ b/views/fxml/digital_trainer/digital_trainer.fxml
@@ -5,55 +5,54 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.Pane?>
 
+<?import javafx.scene.layout.StackPane?>
 <StackPane xmlns:fx="http://javafx.com/javafx"
            fx:controller="vbb.controllers.digital_trainer.DigitalTrainerController">
-    <HBox prefWidth="540" prefHeight="720"
-          minWidth="540" minHeight="720"
-          maxWidth="540" maxHeight="720"
-          spacing="26"
-          id="digital_trainer_board"
-          stylesheets="/vbb/views/css/digital_trainer_style.css">
-        <AnchorPane>
-            <ImageView AnchorPane.topAnchor="7" AnchorPane.leftAnchor="7">
-                <image>
-                    <Image url="/vbb/views/images/screw.png"/>
-                </image>
-            </ImageView>
-            <ImageView AnchorPane.bottomAnchor="7" AnchorPane.leftAnchor="7">
-                <image>
-                    <Image url="/vbb/views/images/screw.png"/>
-                </image>
-            </ImageView>
-        </AnchorPane>
-        <VBox alignment="CENTER" id="breadboard_area" styleClass="area">
-            <padding>
-                <Insets top="5" right="5" bottom="5" left="5"/>
-            </padding>
-            <BreadboardControl fx:id="breadboard"/>
-        </VBox>
-        <VBox alignment="CENTER" spacing="19">
-            <fx:include fx:id="powerSupplyArea" source="power_supply_area.fxml"/>
-            <fx:include fx:id="dataSwitchesArea" source="data_switches_area.fxml"/>
-            <fx:include fx:id="ledDisplayArea" source="led_display_area.fxml"/>
-        </VBox>
-        <AnchorPane>
-            <ImageView AnchorPane.topAnchor="7" AnchorPane.rightAnchor="7">
-                <image>
-                    <Image url="/vbb/views/images/screw.png"/>
-                </image>
-            </ImageView>
-            <ImageView AnchorPane.bottomAnchor="7" AnchorPane.rightAnchor="7">
-                <image>
-                    <Image url="/vbb/views/images/screw.png"/>
-                </image>
-            </ImageView>
-        </AnchorPane>
-    </HBox>
-    <StackPane fx:id="pluggedTools" mouseTransparent="true">
-        <Pane fx:id="pluggedChips" mouseTransparent="true"/>
-        <Pane fx:id="pluggedWires" mouseTransparent="true"/>
-    </StackPane>
+    <Pane fx:id="digitalTrainerArea">
+        <HBox fx:id="board"
+              prefWidth="540" prefHeight="720"
+              minWidth="540" minHeight="720"
+              maxWidth="540" maxHeight="720"
+              spacing="26"
+              id="digital_trainer_board"
+              stylesheets="/vbb/views/css/digital_trainer_style.css">
+            <AnchorPane>
+                <ImageView AnchorPane.topAnchor="7" AnchorPane.leftAnchor="7">
+                    <image>
+                        <Image url="/vbb/views/images/screw.png"/>
+                    </image>
+                </ImageView>
+                <ImageView AnchorPane.bottomAnchor="7" AnchorPane.leftAnchor="7">
+                    <image>
+                        <Image url="/vbb/views/images/screw.png"/>
+                    </image>
+                </ImageView>
+            </AnchorPane>
+            <VBox alignment="CENTER" id="breadboard_area" styleClass="area">
+                <padding>
+                    <Insets top="5" right="5" bottom="5" left="5"/>
+                </padding>
+                <BreadboardControl fx:id="breadboard"/>
+            </VBox>
+            <VBox alignment="CENTER" spacing="19">
+                <fx:include fx:id="powerSupplyArea" source="power_supply_area.fxml"/>
+                <fx:include fx:id="dataSwitchesArea" source="data_switches_area.fxml"/>
+                <fx:include fx:id="ledDisplayArea" source="led_display_area.fxml"/>
+            </VBox>
+            <AnchorPane>
+                <ImageView AnchorPane.topAnchor="7" AnchorPane.rightAnchor="7">
+                    <image>
+                        <Image url="/vbb/views/images/screw.png"/>
+                    </image>
+                </ImageView>
+                <ImageView AnchorPane.bottomAnchor="7" AnchorPane.rightAnchor="7">
+                    <image>
+                        <Image url="/vbb/views/images/screw.png"/>
+                    </image>
+                </ImageView>
+            </AnchorPane>
+        </HBox>
+    </Pane>
 </StackPane>
